--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/logo_marianne"
     tools:context=".MainActivity">
 
     <ImageButton
@@ -12,26 +14,17 @@
         android:layout_height="200dp"
         android:layout_marginStart="23dp"
         android:layout_marginLeft="23dp"
+        android:layout_marginTop="1dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="139dp"
+        android:layout_marginBottom="300dp"
         android:contentDescription="@string/todo"
         app:layout_constraintBottom_toTopOf="@+id/copyright"
         app:layout_constraintEnd_toStartOf="@+id/registerBtn"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_title"
         app:srcCompat="@drawable/login_icn"
         tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/login_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:text="@string/d_j_un_compte"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="344dp" />
 
     <ImageButton
         android:id="@+id/registerBtn"
@@ -39,13 +32,15 @@
         android:layout_height="200dp"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="1dp"
         android:layout_marginEnd="23dp"
         android:layout_marginRight="23dp"
-        android:layout_marginBottom="139dp"
+        android:layout_marginBottom="300dp"
         android:contentDescription="@string/todo"
         app:layout_constraintBottom_toTopOf="@+id/copyright"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/loginBtn"
+        app:layout_constraintTop_toBottomOf="@+id/register_title"
         app:srcCompat="@drawable/register_icn"
         tools:ignore="MissingConstraints" />
 
@@ -53,12 +48,30 @@
         android:id="@+id/register_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="35dp"
-        android:layout_marginRight="35dp"
+        android:layout_marginStart="82dp"
+        android:layout_marginLeft="82dp"
+        android:layout_marginTop="41dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginRight="40dp"
         android:text="@string/pas_encore_de_compte"
+        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="344dp" />
+        app:layout_constraintStart_toEndOf="@+id/login_title"
+        app:layout_constraintTop_toBottomOf="@+id/top_sub"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/login_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="41dp"
+        android:text="@string/d_j_un_compte"
+        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/top_sub"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/copyright"
@@ -68,7 +81,7 @@
         android:layout_marginLeft="124dp"
         android:layout_marginEnd="124dp"
         android:layout_marginRight="124dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="30dp"
         android:text="@string/savemip_copyright_2020"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,16 +90,18 @@
 
     <TextView
         android:id="@+id/top_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
-        android:layout_marginBottom="3dp"
+        android:layout_width="118dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="147dp"
+        android:layout_marginLeft="147dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="146dp"
+        android:layout_marginRight="146dp"
         android:text="@string/savemip"
         android:textSize="32sp"
-        app:layout_constraintBottom_toTopOf="@+id/top_sub"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fr_band_top"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -97,10 +112,21 @@
         android:layout_marginLeft="79dp"
         android:layout_marginEnd="79dp"
         android:layout_marginRight="79dp"
+        android:layout_marginBottom="38dp"
         android:text="@string/le_permis_point_en_toute_transparence"
+        app:layout_constraintBottom_toTopOf="@+id/register_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="285dp" />
+        app:layout_constraintTop_toBottomOf="@+id/top_title"
+        tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/fr_band_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_fr_band" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
