--- a/app/src/main/res/layout/activity_fiauth.xml
+++ b/app/src/main/res/layout/activity_fiauth.xml
@@ -10,9 +10,10 @@
         android:id="@+id/fr_band"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="703dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_fr_band"
-        tools:layout_editor_absoluteY="-11dp" />
+        app:srcCompat="@drawable/ic_fr_band" />
 </androidx.constraintlayout.widget.ConstraintLayout>
